# diplomacy-combined

diplomacy/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.md  compose.yaml  pyproject.toml  requirements-lock.txt
diplomacy/.github/workflows/: checks.yaml
diplomacy/diplomacy/: README_MAPS.txt  README_RULES.txt  __init__.py  settings.py  version.py
diplomacy/diplomacy/client/: channel.py  connection.py  game_instances_set.py  network_game.py  notification_managers.py  response_managers.py
diplomacy/diplomacy/communication/: notifications.py  requests.py  responses.py
diplomacy/diplomacy/daide/: clauses.py  connection_handler.py  messages.py  notification_managers.py  notifications.py  request_managers.py  requests.py  responses.py  server.py  tokens.py  utils.py
diplomacy/diplomacy/daide/tests/: test_daide_game.py  test_requests.py  test_responses.py  test_tokens.py
diplomacy/diplomacy/engine/: game.py  log.py  map.py  message.py  power.py  renderer.py
diplomacy/diplomacy/integration/: __init__.py  base_api.py
diplomacy/diplomacy/integration/webdiplomacy_net/: api.py  game.py  orders.py  utils.py
diplomacy/diplomacy/integration/webdiplomacy_net/tests/: test_game.py  test_orders.py
diplomacy/diplomacy/maps/: known_world_901.map  standard_germany_italy.map
diplomacy/diplomacy/maps/svg/: svg.dtd
diplomacy/diplomacy/maps/tests/: test_map_gen.py
diplomacy/diplomacy/server/: connection_handler.py  notifier.py  request_manager_utils.py  request_managers.py  run.py  scheduler.py  server.py  server_game.py  user.py  users.py
diplomacy/diplomacy/tests/: test_datc.py  test_datc_no_check.py  test_datc_no_expand.py  test_game.py  test_map.py  test_pytest.py
diplomacy/diplomacy/tests/network/: 1.json  2.json  3.json  run_real_game.py  test_real_game.py
diplomacy/diplomacy/utils/: __init__.py  common.py  constants.py  convoy_paths.py  equilateral_triangle.py  errors.py  exceptions.py  export.py  game_phase_data.py  jsonable.py  keywords.py  logger.py  network_data.py  order_results.py  parsing.py  priority_dict.py  scheduler_event.py  sorted_dict.py  sorted_set.py  splitter.py  strings.py
diplomacy/diplomacy/utils/tests/: test_common.py  test_constants.py  test_jsonable.py  test_jsonable_changes.py  test_parsing.py  test_priority_dict.py  test_sorted_dict.py  test_sorted_set.py
diplomacy/diplomacy/web/: .eslintrc  __init__.py  convert_svg_maps_to_react.sh  package-lock.json  package.json  svg_to_react.py
diplomacy/diplomacy/web/public/: index.html
diplomacy/diplomacy/web/src/: index.css  index.js
diplomacy/diplomacy/web/src/diplomacy/client/: channel.js  connection.js  game_instance_set.js  network_game.js  notification_managers.js  request_future_context.js  response_managers.js
diplomacy/docs/: conf.py
diplomacy/vm_conf/: Caddyfile  README.md  compose.yaml
(+115 files in other folders)
